# ucapa

./: .gitignore  .travis.yml  CMakeLists.txt  COMPILE  Doxyfile  LICENSE  README  README.md  all-ucapa.pro  ucapa.pro
cmake/: FindAsio.cmake  FindFFMPEG.cmake
examples/derivate/: CMakeLists.txt  Derivate.pro  extardrone.cpp  extardrone.h  extnavdata.cpp  extnavdata.h  main.cpp
examples/navigator/: CMakeLists.txt  Navigator.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qdronedialog.cpp  qdronedialog.h  qdronedialog.ui
include/: ardrone.h  ardroneconnections.h  config.h  index.h  matrix.h  navdata.h  quaternion.h  utils.h  vector3.h  video.h
src/: ardrone.cpp  ardroneconnections.cpp  navdata.cpp  quaternion.cpp  vector3.cpp  video.cpp
